...
    }

    private func setupTabs() {
        setViewControllers([
            setupControllerForTabBar(imageName: "book.circle.fill"),
            setupControllerForTabBar(imageName: "books.vertical.circle"),
            setupControllerForTabBar(imageName: "person")
        ], animated: true)
    }

    private func setupControllerForTabBar(imageName: String) -> UINavigationController {
        let navigationController = UINavigationController()
        navigationController.tabBarItem.image = UIImage(systemName: imageName)
...
