...
        }
        button.addAction(action, for: .touchUpInside)

        return button
    }()

    private lazy var userIconImage: UIImageView = {
        let imageView = UIImageView()
        imageView.layer.borderWidth = 1
        imageView.clipsToBounds = true
        imageView.contentMode = .scaleAspectFill
        imageView.layer.cornerRadius = view.frame.width / 4

...
